# tiny-fs-manager

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
