[package]
name = "project_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-files = "0.6.2"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = {version = "0.11.14", features=["json"]}
tokio = {version = "1.24.2", features=["rt", "macros"]}
lazy_static="1.4.0"
serde_json = "1.0.91"                
tokio-util = "0.7.4"